some javascript code added

--- a/index.html
+++ b/index.html
@@ -320,273 +320,273 @@
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="A">
                   <p>A</p>
-                  <div
+                  <button
                     id="A1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     A1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="A2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     A2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="A3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     A3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="A4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     A4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="B">
                   <p>B</p>
-                  <div
+                  <button
                     id="B1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                     >
                     B1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="B2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     B2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="B3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     B3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="B4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     B4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="C">
                   <p>C</p>
-                  <div
+                  <button
                     id="C1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     C1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="C2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     C2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="C3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     C3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="C4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     C4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="D">
                   <p>D</p>
-                  <div
+                  <button
                     id="D1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     D1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="D2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     D2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="D3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     D3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="D4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     D4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="E">
                   <p>E</p>
-                  <div
+                  <button
                     id="E1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     E1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="E2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     E2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="E3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     E3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="E4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     E4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="F">
                   <p>F</p>
-                  <div
+                  <button
                     id="F1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     F1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="F2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     F2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="F3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     F3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="F4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     F4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="G">
                   <p>G</p>
-                  <div
+                  <button
                     id="G1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     G1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="G2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     G2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="G3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     G3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="G4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     G4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="H">
                   <p>H</p>
-                  <div
+                  <button
                     id="H1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     H1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="H2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     H2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="H3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     H3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="H4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     H4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="I">
                   <p>I</p>
-                  <div
+                  <button
                     id="I1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     I1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="I2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     I2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="I3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     I3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="I4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     I4
-                  </div>
+                  </button>
                 </div>
                 <div class="flex w-full gap-2 items-center justify-around" id="J">
                   <p>J</p>
-                  <div
+                  <button
                     id="J1"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     J1
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="J2"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     J2
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="J3"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     J3
-                  </div>
-                  <div
+                  </button>
+                  <button
                     id="J4"
                     class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     J4
-                  </div>
+                  </button>
                 </div>
               </div>
             </div>
