more than 4 alert and one time click updated with js

--- a/index.html
+++ b/index.html
@@ -322,25 +322,25 @@
                   <p>A</p>
                   <button
                     id="A1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     A1
                   </button>
                   <button
                     id="A2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     A2
                   </button>
                   <button
                     id="A3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     A3
                   </button>
                   <button
                     id="A4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     A4
                   </button>
@@ -349,25 +349,25 @@
                   <p>B</p>
                   <button
                     id="B1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                     >
                     B1
                   </button>
                   <button
                     id="B2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     B2
                   </button>
                   <button
                     id="B3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     B3
                   </button>
                   <button
                     id="B4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     B4
                   </button>
@@ -376,25 +376,25 @@
                   <p>C</p>
                   <button
                     id="C1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     C1
                   </button>
                   <button
                     id="C2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     C2
                   </button>
                   <button
                     id="C3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     C3
                   </button>
                   <button
                     id="C4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     C4
                   </button>
@@ -403,25 +403,25 @@
                   <p>D</p>
                   <button
                     id="D1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     D1
                   </button>
                   <button
                     id="D2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     D2
                   </button>
                   <button
                     id="D3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     D3
                   </button>
                   <button
                     id="D4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     D4
                   </button>
@@ -430,25 +430,25 @@
                   <p>E</p>
                   <button
                     id="E1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     E1
                   </button>
                   <button
                     id="E2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     E2
                   </button>
                   <button
                     id="E3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     E3
                   </button>
                   <button
                     id="E4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     E4
                   </button>
@@ -457,25 +457,25 @@
                   <p>F</p>
                   <button
                     id="F1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     F1
                   </button>
                   <button
                     id="F2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     F2
                   </button>
                   <button
                     id="F3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     F3
                   </button>
                   <button
                     id="F4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     F4
                   </button>
@@ -484,25 +484,25 @@
                   <p>G</p>
                   <button
                     id="G1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     G1
                   </button>
                   <button
                     id="G2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     G2
                   </button>
                   <button
                     id="G3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     G3
                   </button>
                   <button
                     id="G4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     G4
                   </button>
@@ -511,25 +511,25 @@
                   <p>H</p>
                   <button
                     id="H1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     H1
                   </button>
                   <button
                     id="H2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     H2
                   </button>
                   <button
                     id="H3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     H3
                   </button>
                   <button
                     id="H4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     H4
                   </button>
@@ -538,25 +538,25 @@
                   <p>I</p>
                   <button
                     id="I1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     I1
                   </button>
                   <button
                     id="I2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     I2
                   </button>
                   <button
                     id="I3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     I3
                   </button>
                   <button
                     id="I4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     I4
                   </button>
@@ -565,25 +565,25 @@
                   <p>J</p>
                   <button
                     id="J1"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     J1
                   </button>
                   <button
                     id="J2"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     J2
                   </button>
                   <button
                     id="J3"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     J3
                   </button>
                   <button
                     id="J4"
-                    class="flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
+                    class="ticket flex p-3 px-10 rounded-xl bg-[#F7F8F8] w-16 justify-center items-center"
                   >
                     J4
                   </button>
@@ -596,7 +596,7 @@
               <hr class="border-t border-dashed border-gray-500" />
               <div class="flex flex-col p-4 gap-3 font-inter bg-[#F7F8F8] rounded-xl">
                 <div class="flex justify-between font-bold">
-                  <h4>Seat <span class="font-normal text-xs px-0.5 rounded-full bg-[#1DD100]">4</span></h4>
+                  <h4>Seat <span id="seat-cnt" class="font-normal text-xs px-0.5 rounded-full bg-[#1DD100]">0</span></h4>
                   <h4>Class</h4>
                   <h4>Price</h4>
                 </div>
