utilities.js file added with some function

--- a/index.html
+++ b/index.html
@@ -601,15 +601,8 @@
                   <h4>Price</h4>
                 </div>
                 <hr>
-                <div class="flex justify-between">
-                  <p>C2</p>
-                  <p>Economy</p>
-                  <p>550</p>
-                </div>
-                <div class="flex justify-between">
-                  <p>C2</p>
-                  <p>Economy</p>
-                  <p>550</p>
+                <div id="seat-info">
+                  
                 </div>
                 <hr>
                 <div class="flex justify-between">
@@ -648,6 +641,7 @@
       </section>
       <!-- purchase ticket section ends here  -->
     </main>
+    <script src="./scripts/utilities.js"></script>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
